--- a/app/views/listings/new.haml
+++ b/app/views/listings/new.haml
@@ -1,8 +1,8 @@
 - content_for :extra_javascript do 
   = javascript_include_tag "listings/new_listing/manifest"
 #new-listing.flex{"ng-controller": "newListingCtrl"}
-  %md-tabs.md-hue-1{"md-center-tabs": true, "md-dynamic-height": "true", style: "background: #fff;"}
-    %md-tab{"ng-if": "false", style: "display:none;", label: "Payments"}
+  %md-steppers{"md-dynamic-height": true, "md-stretch-steppers": "always", "md-selected": "selected"}
+    %md-step{"ng-if": "false", style: "display:none;", label: "Payments"}
       %md-content.md-padding
         %h2.md-headline 
           How can we pay you?
@@ -39,7 +39,7 @@
             .col-12
               .paypal-redirect-message
                 = t("paypal_accounts.redirect_message", redirect_link: paypal_redirect_link).html_safe
-    %md-tab{label: "Info"}
+    %md-step{label: "Start", "md-complete": "step[0].complete"}
       %md-content.bg-body.md-padding
         .layout-row.layout-align-center-center
           .layout-column.flex-gt-sm-66.layout-margin
@@ -48,30 +48,29 @@
                 .flex
                 %md-button.md-icon-button
                   %i.icon-remove.md-primary
-              .icon-row.layout-row.layout-xs-column.layout-padding
-                .flex
+              .layout-column.layout-padding.flex.layout-gt-sm-row        
+                .flex.layout-column.layout-align-center-center
                   %img{"src": "https://assets.tackhunter.com/marketing/sale.svg"}
-                .flex
+                  .hero-caption
+                    %h3.md-headline
+                      3%, if it sells.
+                    %p.md-caption
+                      List as many items as you want for free. Only pay if your listing sells on Tack Hunter.
+                .flex.layout-column.layout-align-center-start
                   %img{"src": "https://assets.tackhunter.com/marketing/lock.svg"}
-                .flex
-                  %img{"src": "https://assets.tackhunter.com/marketing/lookout.svg"}
-              .layout-row.layout-xs-column.layout-padding.layout-align-center-center                
-                .flex.layout-column.layout-align-center-center{style: "text-align: center;"}
-                  %h3.md-headline
-                    3%, if it sells.
-                  %p.md-caption
-                    List as many items as you want for free. Only pay if your listing sells on Tack Hunter.
-                .flex.layout-column.layout-align-center-center{style: "text-align: center;"}
-                  %h3.md-headline
-                    Seller protection
-                  %p.md-caption
-                    Our platform is the safest way to sell your tack online. 
+                  .hero-caption
+                    %h3.md-headline
+                      Seller protection
+                    %p.md-caption
+                      Our platform is the safest way to sell your tack online. We're riders just like you!
 
-                .flex.layout-column.layout-align-center-center{style: "text-align: center;"}
-                  %h3.md-headline
-                    We're always here
-                  %p.md-caption
-                    Have a question? Email us at support@tackhunter.com, and we'll get back to you within the hour.
+                .flex.layout-column.layout-align-center-satart
+                  %img{"src": "https://assets.tackhunter.com/marketing/lookout.svg"}
+                  .hero-caption
+                    %h3.md-headline
+                      We're always here
+                    %p.md-caption
+                      Have a question? Email us at support@tackhunter.com, and we'll get back to you within the hour.
 
             .md-whiteframe-z1
               %md-toolbar.md-hue-1
@@ -81,9 +80,9 @@
                       What are you selling?
               %md-content.layout-padding
                 %form
-                .layout-row-gt-sm.layout-padding{"ng-show": "false"}
-                  %md-input-container.flex-25
-                    %md-radio-group{"ng-model": "listing.discipline_id"}
+                .layout-row-gt-sm.layout-padding
+                  %md-input-container.flex
+                    %md-radio-group.layout-row{"ng-model": "listing.discipline_id"}
                       %md-radio-button{"ng-repeat": "option in disciplines", value: "{{option.name}}"}
                         {{option.name}}
 
@@ -120,10 +119,10 @@
                     %label
                       Condition
                     %md-select{"ng-model": "listing.condition"}
-                      %md-option{"ng-repeat": "condition in conditions", value: "condition", "ng-bind": "condition"}
+                      %md-option{"ng-repeat": "condition in conditions track by $index", "ng-bind": "condition"}
 
 
-    %md-tab{label: "Category"}
+    %md-step{label: "About"}
       %md-content.bg-body.md-padding
         .layout-row.layout-align-center-center
           .layout-column.flex-gt-sm-66.layout-margin
@@ -145,9 +144,9 @@
                     %md-radio-group{"ng-show": "categories", "ng-model": "listing.discipline_id"}
                       %md-radio-button{"ng-repeat": "option in categories", value: "{{option.url}}"}
                         {{option.url}}
-    %md-tab{label: "Pictures"}
+    %md-step{label: "Photos"}
 
-    %md-tab{label: "Preview"}
+    %md-step{label: "Preview"}
 
 %md-button.progress-button.md-button.md-fab.md-fab-bottom-right{style: "position: fixed;"}
   Next
