--- a/app/assets/stylesheets/views/_listings.css.scss
+++ b/app/assets/stylesheets/views/_listings.css.scss
@@ -296,7 +296,7 @@ $listing-author-avatar-height: 108;
           }
         }
       }
-      .md-button {
+      .md-button.close-button {
         i {
           color: #767676;
         }
