--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 // The fonts file has to be the first one, since there are @imports in the fonts file
 //= require ./fonts
 //= require angular-material
+//= require ng-img-crop.css
 //= require material-steppers.css
 
 
